Added regex for t.co instead of twitter.com

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		    url.href = document.referrer;
 		    alert('Refer = ' + url.hostname);
 
-		    if (document.referrer.indexOf('twitter.com') >= 0) 
+		    if (document.referrer.indexOf('t.co') >= 0) 
 		    {
 		    	document.getElementById("twittershare").style.display = "block";
 		    }
