Get rid of console errors by removing/fixing scripts

--- a/index.html
+++ b/index.html
@@ -262,17 +262,14 @@
 	})();
 	</script>
 
-	<script type="text/javascript">
-	(function(){var a=document,b=a.createElement("script"),a=a.getElementsByTagName("script")[0];b.type="text/javascript";b.async=!0;b.src="https://z.moatads.com/washpost421KqtH31/moatcontent.js";a.parentNode.insertBefore(b,a)})();
-	</script>
 
-	<script id="twp-identity" src="//js.washingtonpost.com/1h/twp-global.js"></script>
+	<script id="twp-identity" src="http://js.washingtonpost.com/1h/twp-global.js"></script>
 
 </head>
 
 <body onload="handleReferrerDomain()" class="pb-theme-normal pb-full-fluid">
 
-<script type="text/javascript" src="//js.washingtonpost.com/wp-stat/otto/js/mbox.js"></script>
+<script type="text/javascript" src="http://js.washingtonpost.com/wp-stat/otto/js/mbox.js"></script>
 
 	<div class="mboxDefault"></div>
 
@@ -662,7 +659,6 @@
 
 			</div>
 		</div>
-		<script src="//js.washingtonpost.com/wp-srv/ad/loaders/latest/js/min/loader.min.js" async data-ad-page-type="responsive" data-ad-site="wp"></script> 
 		<script src="/pb/resources/js/jqModal.js?_=78619&_minify=false"></script>
 		<script src="/pb/resources/js/jquery.ui.core.js?_=78619&_minify=false"></script>
 		<script src="/pb/resources/js/inline-content.js?_=78619&_minify=false"></script>
@@ -681,7 +677,6 @@
 		<noscript><img src="https://sb.scorecardresearch.com/p?c1=2&c2=3005617&cv=2.0&cj=1" /></noscript>
 
 		<noscript><img src="//me.effectivemeasure.net/em_image" alt="" style="position:absolute; left:-5px;" /></noscript>
-		<script type="text/javascript" src="//widget.perfectmarket.com/wwwwashingtonpost/load.js" ></script>
 		<script type="text/javascript">
 		(function($){
 			try{
@@ -715,9 +710,7 @@
 		})(jQuery);
 		</script>
 		<!-- JS for RumDS -->
-		<script type="text/javascript">!function(){if(!(Math.floor(100*Math.random())>99)){var a,b,c,d="http://js.washingtonpost.com/wp-stat/rum/wprum.min.js",e=document.createElement("iframe");e.src="javascript:false",(e.frameElement||e).style.cssText="width: 0; height: 0; border: 0";var c=document.getElementsByTagName("script")[0];c.parentNode.insertBefore(e,c);try{b=e.contentWindow.document}catch(f){a=document.domain,e.src="javascript:var d=document.open();d.domain='"+a+"';void(0);",b=e.contentWindow.document}b.open()._l=function(){var b=this.createElement("script");a&&(this.domain=a),b.id="boomr-if-as",b.src=d,this.body.appendChild(b)},b.write('<body onload="document._l();">'),b.close()}}();</script>
-
-
+		<script src="http://rumds.wpdigital.net/metrics/?rum=%7B%22redt%22%3A0%2C%22nl%22%3A19%2C%22dns%22%3A0%2C%22tcp%22%3A0%2C%22rest%22%3A19%2C%22domt%22%3A1168%2C%22uplt%22%3A1524%2C%22url%22%3A%22file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html%22%2C%22site%22%3A%22%22%2C%22title%22%3A%22Why%20the%20July%2014%20Pluto%20flyby%20will%20be%20a%20spectacular%20event%20for%20all%20of%20us%20-%20The%20Washington%20Post%22%2C%22domn%22%3A403%2C%22jhs%22%3A11900000%2C%22fpt%22%3A1436706555.386343%7D&v=0.9&u=file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html&if=">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
 		<script>
