--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 	<title> Why the July 14 Pluto flyby will be a spectacular event for all of us - The Washington Post</title>
 
 		<style>
+			div#fsbLJ82enlfjhp {
+				padding-right: 0 !important;
+				border-right: 0 !important;
+			}
+			#pb-root > .pb-container {
+				max-width: 800px !important;
+			}
 			div#cBVVj22enlfjhp {width: 100%;}
 			.pb-f-sharebars-top-share-bar .top-sharebar-wrapper.color-top .social-tools-wrapper .tool.twitter {
 				display: block;
@@ -710,24 +717,20 @@
 		})(jQuery);
 		</script>
 		<!-- JS for RumDS -->
-		<script src="http://rumds.wpdigital.net/metrics/?rum=%7B%22redt%22%3A0%2C%22nl%22%3A19%2C%22dns%22%3A0%2C%22tcp%22%3A0%2C%22rest%22%3A19%2C%22domt%22%3A1168%2C%22uplt%22%3A1524%2C%22url%22%3A%22file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html%22%2C%22site%22%3A%22%22%2C%22title%22%3A%22Why%20the%20July%2014%20Pluto%20flyby%20will%20be%20a%20spectacular%20event%20for%20all%20of%20us%20-%20The%20Washington%20Post%22%2C%22domn%22%3A403%2C%22jhs%22%3A11900000%2C%22fpt%22%3A1436706555.386343%7D&v=0.9&u=file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html&if=">
+		<script src="http://rumds.wpdigital.net/metrics/?rum=%7B%22redt%22%3A0%2C%22nl%22%3A19%2C%22dns%22%3A0%2C%22tcp%22%3A0%2C%22rest%22%3A19%2C%22domt%22%3A1168%2C%22uplt%22%3A1524%2C%22url%22%3A%22file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html%22%2C%22site%22%3A%22%22%2C%22title%22%3A%22Why%20the%20July%2014%20Pluto%20flyby%20will%20be%20a%20spectacular%20event%20for%20all%20of%20us%20-%20The%20Washington%20Post%22%2C%22domn%22%3A403%2C%22jhs%22%3A11900000%2C%22fpt%22%3A1436706555.386343%7D&v=0.9&u=file%3A%2F%2F%2FUsers%2Fdavis%2Fhackingjournalism%2Findex.html&if="></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
 		<script>
 			$(document).ready(function () {
 				// create cookie
-				var visited = $.cookie('visited'); // visited = 0
-				if (visited >= 3) {
-					// open fancybox after 3 secs on 4th visit or further on the same day
-					setTimeout(function () {
-						$.fancybox.open({
-							// your fancybox API options here
-						});
-					}, 3000);
+				var visited = $.cookie('wapo'); // visited = 0
+				if (visited >= 1) {
+					console.log("I see you bro!");
 				} else {
+					console.log("New visitor");
 					visited++; // increase counter of visits
 					// set new cookie value to match visits
-					$.cookie('visited', visited, {
+					$.cookie('wapo', visited, {
 						expires: 1 // expires after one day
 					});
 					return false;
