Let's actually make Facebook the default

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					url.href = document.referrer;
 					if (document.referrer.indexOf('t.co') >= 0) {
 						document.getElementById("twittershare").style.display = "block";
-					} else if (document.referrer.indexOf('facebook.com') >= 0) {
+					} else {
 						document.getElementById("facebookshare").style.display = "block";
 					}
 				}
