--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="space,  nasa,  new horizons,  pluto,  charon,  flyby,  ceres,  dawn,  rosetta,  comet,  kuiper,  kuiper belt,  solar system,  life" />
   <meta itemprop="description" name="description" content="It's the end of one era of solar system exploration and the beginning of another." />
   <meta name="news_keywords" content="space,  nasa,  new horizons,  pluto,  charon,  flyby,  ceres,  dawn,  rosetta,  comet,  kuiper,  kuiper belt,  solar system,  life" />
+  <meta name="section" content="speaking-of-science" />
   <meta name="twitter:site" value="@WashingtonPost" />
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:description" content="It's the end of one era of solar system exploration and the beginning of another." />
@@ -55,75 +56,22 @@
       width: 100%;
     }
   </style>
-  <script>
-    // Darren  : using this to detect mobile : https://github.com/kaimallea/isMobile 
-    ! function (a) {
-      var b = /iPhone/i,
-        c = /iPod/i,
-        d = /iPad/i,
-        e = /(?=.*\bAndroid\b)(?=.*\bMobile\b)/i,
-        f = /Android/i,
-        g = /IEMobile/i,
-        h = /(?=.*\bWindows\b)(?=.*\bARM\b)/i,
-        i = /BlackBerry/i,
-        j = /BB10/i,
-        k = /Opera Mini/i,
-        l = /(?=.*\bFirefox\b)(?=.*\bMobile\b)/i,
-        m = new RegExp("(?:Nexus 7|BNTV250|Kindle Fire|Silk|GT-P1000)", "i"),
-        n = function (a, b) {
-          return a.test(b)
-        },
-        o = function (a) {
-          var o = a || navigator.userAgent,
-            p = o.split("[FBAN");
-          return "undefined" != typeof p[1] && (o = p[0]), this.apple = {
-            phone: n(b, o),
-            ipod: n(c, o),
-            tablet: !n(b, o) && n(d, o),
-            device: n(b, o) || n(c, o) || n(d, o)
-          }, this.android = {
-            phone: n(e, o),
-            tablet: !n(e, o) && n(f, o),
-            device: n(e, o) || n(f, o)
-          }, this.windows = {
-            phone: n(g, o),
-            tablet: n(h, o),
-            device: n(g, o) || n(h, o)
-          }, this.other = {
-            blackberry: n(i, o),
-            blackberry10: n(j, o),
-            opera: n(k, o),
-            firefox: n(l, o),
-            device: n(i, o) || n(j, o) || n(k, o) || n(l, o)
-          }, this.seven_inch = n(m, o), this.any = this.apple.device || this.android.device || this.windows.device || this.other.device || this.seven_inch, this.phone = this.apple.phone || this.android.phone || this.windows.phone, this.tablet = this.apple.tablet || this.android.tablet || this.windows.tablet, "undefined" == typeof window ? this : void 0
-        },
-        p = function () {
-          var a = new o;
-          return a.Class = o, a
-        };
-      "undefined" != typeof module && module.exports && "undefined" == typeof window ? module.exports = o : "undefined" != typeof module && module.exports && "undefined" != typeof window ? module.exports = p() : "function" == typeof define && define.amd ? define("isMobile", [], a.isMobile = p()) : a.isMobile = p()
-    }(this);
-    (function () {
-      // I only want to redirect iPhones, Android phones and a handful of 7" devices
-      if (isMobile.apple.phone || isMobile.android.phone || isMobile.seven_inch) {
-        // alert("We are mobile");
-      } else {
-        // alert("We are NOT mobile");
-      }
-    })();
-  </script>
-
-  <script>
-    function handleReferrerDomain() {
-      var url = document.createElement('a');
-      url.href = document.referrer;
-      if (document.referrer.indexOf('t.co') >= 0) {
-        document.getElementById("twittershare").style.display = "block";
-      } else {
-        document.getElementById("facebookshare").style.display = "block";
-      }
-    }
-  </script>
+	<script>
+			function handleReferrerDomain() {
+				var url = document.createElement('a');
+				url.href = document.referrer;
+				var m = $("meta[name=section]").attr("content"); 
+				if (document.referrer.indexOf('t.co') >= 0) {
+					document.getElementById("twittershare").style.display = "block";
+				} else if (document.referrer.indexOf('facebook.com') >= 0)  {
+					document.getElementById("facebookshare").style.display = "block";
+				} else if ( m == 'speaking-of-science' ) {
+					document.getElementById("emailshare").style.display = "block";
+				} else {
+					document.getElementById("facebookshare").style.display = "block";
+				}
+			}
+	</script>
 
   <meta property="article:author" content="https://www.facebook.com/feltman?fref=ts" />
   <meta property="author" content="https://www.facebook.com/feltman?fref=ts" />
