Couple style tweaks

--- a/index.html
+++ b/index.html
@@ -822,11 +822,8 @@
             }
           </style>
         </div>
-
-        <div>
-
-        </div>
-        <div>
+        <div class="pb-feature">
+        	<h2>Subscribe to our awesome newsletter</h2>
           <form class="subscribe-form" style="width: 100%;">
             <input type="text" class="subscribe-input" placeholder="Enter your email address"/>
             <input type="submit" value="Subscribe!" class="subscribe-submit"/>
