Change section of second.html

--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="space,  nasa,  new horizons,  pluto,  charon,  flyby,  ceres,  dawn,  rosetta,  comet,  kuiper,  kuiper belt,  solar system,  life" />
   <meta itemprop="description" name="description" content="It's the end of one era of solar system exploration and the beginning of another." />
   <meta name="news_keywords" content="space,  nasa,  new horizons,  pluto,  charon,  flyby,  ceres,  dawn,  rosetta,  comet,  kuiper,  kuiper belt,  solar system,  life" />
-  <meta name="section" content="speaking-of-science" />
+  <meta name="section" content="intertia" />
   <meta name="twitter:site" value="@WashingtonPost" />
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:description" content="It's the end of one era of solar system exploration and the beginning of another." />
